# gate-guardian

./: .gitlint  .pre-commit-config.yaml  main.py  pyproject.toml  setup.cfg
.github/workflows/: pypi-publisher.yml
datasets/: dataset.json  nomes_brasileiros.json
models/pii_model/: meta.json
models/pii_model/ner/: model  moves
models/pii_model/vocab/: strings.json
scripts/: extract_names.py
src/: Doc.py  Entity.py  Model.py  PIIDetector.py
tests/: test_pii_detector.py
