[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-guardian"
version = "0.0.1"
dependencies = [
    "cpf-cnpj-validate==1.4",
    "pydantic==2.9",
    "python-dotenv==1.0.1",
    "spacy==3.8.2",
]
requires-python = ">=3.12"
authors = [{ name = "Bruno Justo", email = "brunohjs@gmail.com" }]
maintainers = [{ name = "Bruno Justo", email = "brunohjs@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["pii-detector", "python", "spacy", "regex", "mask"]

[project.optional-dependencies]
dev = [
    "flake8",
    "pre-commit",
    "pytest",
    "pytest-cov"
]
deploy = [
    "build",
    "twine"
]

[project.urls]
Repository = "https://github.com/brunohjs/gate-guardian"
"Bug Tracker" = "https://github.com/brunohjs/gate-guardian/issues"
Changelog = "https://github.com/brunohjs/gate-guardian/blob/master/CHANGELOG.md"
